<resources>
    <string name="app_name">D424 Vacation Planner</string>
    <string name="vacation_planner_app">Vacation Planner App!</string>
    <string name="create_a_vacation">Create a Vacation</string>
    <string name="list_vacations">List Vacations</string>
    <string name="go_back">Go Back</string>
    <string name="add_an_excursion">Add an Excursion!</string>
    <string name="excursion_title">Excursion Title</string>
    <string name="pick_an_excursion_date">Pick an Excursion Date</string>
    <string name="schedule_notification">Schedule Notification</string>
    <string name="create_excursion">Create Excursion</string>
    <string name="go_back1">Go Back</string>
    <string name="excursion_details">Excursion Details</string>
    <string name="excursion_title_detail">Excursion Title</string>
    <string name="enter_excursion_title">Enter excursion title</string>
    <string name="select_excursion_date">Select excursion date</string>
    <string name="excursion_date">Excursion Date</string>
    <string name="save_changes">Save Changes</string>
    <string name="schedule_notification_ex_detail">Schedule Notification</string>
    <string name="delete_excursion">Delete</string>
    <string name="go_back_vac_ex">Go Back</string>
    <string name="add_or_view_excursions">Add or View Excursions</string>
    <string name="add_excursion">Add Excursion</string>
    <string name="add_excursion_vac_ex">Add Excursion</string>
    <string name="go_back_list_vac">Go Back</string>
    <string name="list_of_vacations">List of Vacations</string>
    <string name="hero_image">hero image</string>
    <string name="go_back_vac">Go Back</string>
    <string name="create_new_vacation">Create a Vacation!</string>
    <string name="vacation_title">Vacation Title</string>
    <string name="hotel_place">Hotel/Place</string>
    <string name="pick_a_start_date">Pick a Start Date</string>
    <string name="pick_a_end_date">Pick a End Date</string>
    <string name="schedule_notification_new_vac">Schedule Notification</string>
    <string name="create_vacation">Create Vacation</string>
    <string name="go_back_vac_detail">Go Back</string>
    <string name="vacation_details">Vacation Details</string>
    <string name="vacation_title_detail">Vacation Title</string>
    <string name="enter_vacation_title">Enter vacation title</string>
    <string name="hotel_place_detail">Hotel/Place</string>
    <string name="enter_hotel_or_place">Enter hotel or place</string>
    <string name="select_start_date">Select start date</string>
    <string name="vacation_start_date">Vacation Start Date</string>
    <string name="select_end_date">Select end date</string>
    <string name="vacation_end_date">Vacation End Date</string>
    <string name="schedule_notification_vac_detail">Schedule Notification</string>
    <string name="save_changes_vac_detail">Save Changes</string>
    <string name="delete_vac">Delete</string>
    <string name="share_vacation_details">Share vacation details</string>
    <string name="share_vacation">Share Vacation</string>
    <string name="view_edit">View/Edit</string>
    <string name="search_link">Search</string>
    <string name="download_report">Download Report</string>
    <string name="download_report_text">Download Report</string>
</resources>