<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.MainActivity">

    <!-- A user-friendly, functional GUI -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/hero_image"
        android:scaleType="centerCrop"
        android:src="@drawable/beach_background"
        android:adjustViewBounds="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top|center_horizontal"
        android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vacation_planner_app"
        android:textSize="34sp"
        android:textStyle="bold"
        android:textColor="#3B3194"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <Button
                android:id="@+id/vacation_page_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/create_a_vacation"
                android:layout_margin="10dp"/>

            <Button
                android:id="@+id/list_vacation_page_link"
                android:layout_width="147dp"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/list_vacations"
                android:layout_margin="10dp"/>

            <Button
                android:id="@+id/search_page_link"
                android:layout_width="147dp"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/search_link"
                android:layout_margin="10dp"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>