<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.CreateExcursion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top"
        android:padding="16dp">

        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_ios_new_24"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/go_back"
            android:padding="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top|center_horizontal"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_an_excursion"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/excursion_title"
                android:labelFor="@id/excursionTitleText"
                android:layout_marginEnd="8dp" />

            <EditText
                android:id="@+id/excursionTitleText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="48dp"
                android:inputType="text"
                android:ems="5"
                android:importantForAutofill="no" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:padding="8dp">

            <Button
                android:id="@+id/excursionDatePickerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick_an_excursion_date"
                android:layout_gravity="center" />

            <CheckBox
                android:id="@+id/checkboxScheduleNotification"
                android:layout_width="wrap_content"
                android:layout_height="76dp"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/schedule_notification"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonCreateExcursion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_excursion" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>