<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.CreateVacation">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="Background Image"
        android:scaleType="centerCrop"
        android:src="@drawable/water_background" />

    <!-- A user-friendly, functional GUI -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_marginTop="25dp"
        android:paddingTop="20dp"
        android:background="@color/white"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        tools:ignore="MissingConstraints">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top"
        android:padding="16dp">

        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_ios_new_24"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/go_back_vac"
            android:padding="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top|center_horizontal"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_vacation"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vacation_title"
                android:labelFor="@id/vacation_title_text"
                android:layout_marginEnd="8dp" />

            <EditText
                android:id="@+id/vacation_title_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="48dp"
                android:inputType="text"
                android:ems="5"
                android:importantForAutofill="no" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hotel_place"
                android:labelFor="@id/vacation_hotel_text"
                android:layout_marginEnd="8dp" />

            <EditText
                android:id="@+id/vacation_hotel_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="48dp"
                android:inputType="text"
                android:ems="5"
                android:importantForAutofill="no" />
        </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="8dp">

        <Button
            android:id="@+id/startDatePickerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_a_start_date"
            android:layout_gravity="center"
            android:layout_marginEnd="16dp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/endDatePickerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_a_end_date"
            android:layout_gravity="center"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

        <CheckBox
            android:id="@+id/checkboxScheduleNotification"
            android:layout_width="wrap_content"
            android:layout_height="76dp"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/schedule_notification_new_vac"
            android:textSize="16sp" />

        <Button
            android:id="@+id/buttonCreateVacation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_vacation" />

    </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>