<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.LIstVacationExcursions">

    <!-- A user-friendly, functional GUI -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top"
        android:padding="16dp">

        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_ios_new_24"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/go_back_vac_ex"
            android:padding="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top|center_horizontal"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_or_view_excursions"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_excursion"
            android:labelFor="@id/addExcursion"
            android:layout_marginEnd="8dp"
            android:paddingTop="22dp"/>

        <ImageButton
            android:id="@+id/addExcursion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_add_24"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/add_excursion_vac_ex"
            android:padding="8dp"/>

        <!-- Scalability - Recycler view allows dynamic result population and scrolling -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewExcursions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="always"
            android:layout_marginTop="20dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>